@@ -17,6 +17,9 @@ import java.io.IOException;
 import java.util.List;
 import java.util.Optional;
 
+import static cz.incad.nkp.inprove.permonikapi.audit.AuditableDefinition.DELETED_FIELD;
+import static cz.incad.nkp.inprove.permonikapi.config.security.user.UserProducer.getCurrentUser;
+
 @Service
 public class MetaTitleService implements MetaTitleDefinition {
 
@@ -35,17 +38,24 @@ public class MetaTitleService implements MetaTitleDefinition {
 
     public Optional<MetaTitle> getMetaTitleById(String metaTitleId) throws SolrServerException, IOException {
         SolrQuery solrQuery = new SolrQuery("*:*");
-        solrQuery.addFilterQuery(IS_PUBLIC_FIELD + ":true", ID_FIELD + ":\"" + metaTitleId + "\"");
+        solrQuery.addFilterQuery(ID_FIELD + ":\"" + metaTitleId + "\"");
+
+        if (getCurrentUser() == null) {
+            solrQuery.addFilterQuery(IS_PUBLIC_FIELD + ":true");
+        }
+
+        solrQuery.addFilterQuery("-" + DELETED_FIELD + ":[* TO *]");
         solrQuery.setRows(1);
 
         QueryResponse response = solrClient.query(META_TITLE_CORE_NAME, solrQuery);
         List<MetaTitle> metaTitleList = response.getBeans(MetaTitle.class);
 
-        return metaTitleList.isEmpty() ? Optional.empty() : Optional.of(metaTitleList.get(0));
+        return metaTitleList.isEmpty() ? Optional.empty() : Optional.of(metaTitleList.getFirst());
     }
 
     public List<MetaTitle> getMetaTitles() throws SolrServerException, IOException {
         SolrQuery solrQuery = new SolrQuery("*:*");
+        solrQuery.addFilterQuery("-" + DELETED_FIELD + ":[* TO *]");
         solrQuery.setRows(100000);
 
         QueryResponse response = solrClient.query(META_TITLE_CORE_NAME, solrQuery);
@@ -56,6 +66,7 @@ public class MetaTitleService implements MetaTitleDefinition {
     public List<MetaTitle> getAllPublicMetaTitles() throws SolrServerException, IOException {
         SolrQuery solrQuery = new SolrQuery("*:*");
         solrQuery.addFilterQuery(IS_PUBLIC_FIELD + ":true");
+        solrQuery.addFilterQuery("-" + DELETED_FIELD + ":[* TO *]");
         solrQuery.setRows(100000);
 
         QueryResponse response = solrClient.query(META_TITLE_CORE_NAME, solrQuery);
@@ -64,7 +75,7 @@ public class MetaTitleService implements MetaTitleDefinition {
     }
 
     public List<MetaTitleOverviewDTO> getMetaTitleOverview() throws SolrServerException, IOException {
-        List<MetaTitle> metaTitles = getAllPublicMetaTitles();
+        List<MetaTitle> metaTitles = getCurrentUser() != null ? getMetaTitles() : getAllPublicMetaTitles();
         return metaTitles
                 .stream()
                 .map(metaTitle -> {
@@ -93,6 +104,8 @@ public class MetaTitleService implements MetaTitleDefinition {
             throw new RuntimeException("MetaTitle not found");
         }
 
+        metaTitle.preUpdate();
+
         try {
             solrClient.addBean(META_TITLE_CORE_NAME, metaTitle);
             solrClient.commit(META_TITLE_CORE_NAME);
@@ -119,6 +132,8 @@ public class MetaTitleService implements MetaTitleDefinition {
 
         MetaTitle newMetaTitle = new MetaTitle();
         creatableMetaTitleMapper.createMetaTitle(metaTitle, newMetaTitle);
+
+        newMetaTitle.prePersist();
 
 
         try {
